2006-05-24  Kjartan Maraas  <kmaraas@gnome.org>

	* translation-status.xml: Updated branch info for 2.14.x.

2006-05-18  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: ekiga and gnome-system-tools have been
	branched for gnome-2-14.

2006-05-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed baobab; it is now part of
	gnome-utils. Thanks to Funda Wang for pointing it out.

2006-05-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gconf-editor and gconf have been
	branched for gnome-2-14.

2006-05-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: totem has been
	branched for gnome-2-14.

2006-05-01  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: evo* should be in X.8 series.

2006-04-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed the gnome-applets-locations
	branch, and evolution-webcal, nautilus, eel, gnome-session,
	and gdm2 have all been branched for gnome-2-14.

2006-04-26  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added chronojump.

2006-04-23  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-mag, gnome-vfs, and libwnck
	have all been branched for gnome-2-14.

2006-04-19  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-keyring has been
	branched for gnome-2-14.

2006-04-16  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-doc-utils has been
	branched for gnome-2-14.

2006-04-16  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: comment out at-spi. It does not
	generate translations anymore, plus the dependency of
	gettext has been removed.

2006-04-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-control-center,
	gnome-applets, and sound-juicer have all been branched for
	gnome-2-14.

2006-04-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-screensaver and