@@ -2862,6 +2862,17 @@
       </component>
     </version>
   </module>
+  <module name="resapplet">
+    <version release="HEAD">
+      <component name="resapplet" dir="resapplet" group="extras">
+        <podir dir="po"/>
+        <potname name="resapplet.pot"/>
+        <branch name="HEAD"/>
+        <regenerate/>
+        <download/>
+      </component>
+    </version>
+  </module>
   <module name="rhythmbox">
     <version release="HEAD">
       <component name="rhythmbox" dir="rhythmbox" group="extras">
