@@ -1,3 +1,7 @@
+2006-05-26  Funda Wang  <fundawang@linux.net.cn>
+
+	* translation-status.xml: Added resapplet module into extras.
+
 2006-05-24  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* translation-status.xml: Updated branch info for 2.14.x.
